Fix images overlapping menu

--- a/app/styles/ui/changes/_changes-view.scss
+++ b/app/styles/ui/changes/_changes-view.scss
@@ -71,4 +71,5 @@
   display: flex;
   flex-grow: 1;
   min-width: 0;
+  overflow: overlay;
 }
